test/fail/annotated-confidential-override.grace
constructor above {
  method name {}
}

object {
  inherits above

  method name is confidential {}
}
